--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,11 @@ body {
   max-width: 75%;
 }
 
+.home-container{
+  margin-top: 20px;
+  text-align: center;
+}
+
 @media (max-width: 768px) {
 
   .col-md-3,
