--- a/src/App.css
+++ b/src/App.css
@@ -17,17 +17,23 @@ body {
   flex-wrap: wrap;
 }
 
+.css-6uzb1x {
+  padding: 16px;
+  width: 80vw !important;
+  margin-left: 16px !important;
+}
+
 .col-md-3 {
-  flex: 0 0 25%;
-  max-width: 25%;
+  flex: 0 0 15%;
+  max-width: 15%;
 }
 
 .col-md-9 {
-  flex: 0 0 75%;
-  max-width: 75%;
+  flex: 0 0 85%;
+  max-width: 85%;
 }
 
-.home-container{
+.home-container {
   margin-top: 20px;
   text-align: center;
 }
