--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -30,13 +30,16 @@
     border-radius: 4px;
     transition: background-color 0.3s;
 }
+.nav-item .dropdown .sale-status-dropdown-toggle{
+
+}
 
 .navbar ul li a.nav-link:hover,
 .navbar ul li.nav-item .nav-link:hover {
     background-color: rgba(255, 255, 255, 0.1);
 }
 
-.dropdown-content {
+.dropdown-content, .sale-status-dropdown-content {
     display: none;
     position: absolute;
     background-color: #e8e8e8;
@@ -52,16 +55,27 @@
     margin-top: 10px;
 }
 
-.dropdown-content a {
-    color: #000;
-    padding: 10px;
-    text-decoration: none;
-    display: block;
-    transition: background-color 0.3s;
+.sale-status-dropdown-content.open {
+  display: block;
+  left: 262px;
+  top: 145px;
 }
 
-.dropdown-content a:hover {
-    background-color: rgba(255, 255, 255, 0.3);
+.dropdown-content a,
+.dropdown-content li,
+.sale-status-dropdown-content a {
+  color: #000;
+  padding: 10px;
+  text-decoration: none;
+  display: block;
+  transition: background-color 0.3s;
+}
+
+.dropdown-content a:hover,
+.dropdown-content .nav-item span:hover,
+.sale-status-dropdown-content li:hover {
+  background-color: rgba(255, 255, 255, 0.3);
+  cursor: pointer;
 }
 
 .navbar ul li.dropdown .dropdown-toggle i {
@@ -109,3 +123,6 @@
     }
   }
 
+/* display: block;
+    left: 262px;
+    top: 145px; */
