store info, stock register, item cate register with services done, some other fixes

--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,8 @@ body {
 }
 
 .css-6uzb1x {
-  padding: 16px;
+  padding-left: 44px !important;
+  padding-top: 24px !important;
   width: 80vw !important;
   margin-left: 16px !important;
 }
